Rephrase bio tagline

--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   name             : "Jason Hemann"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : >-
-    I am a Computer Science Professor at Seton Hall University.
+    Assistant Professor of Computer Science at Seton Hall University.
   location         : "South Orange, NJ"
   twitter          : "jhemann"
   email            : "mailto:hemannja@shu.edu"
