--- a/_config.yml
+++ b/_config.yml
@@ -16,17 +16,17 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
+title                    : # ""
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Jason Hemann"
-description              : "An amazing website."
+description              : # ""
 url                      : "http://jasonhemann.github.com/"
 baseurl                  : "" # "/jhemann/test-site"
-repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
+repository               : # "jasonhemann/XXX"
+teaser                   : "/assets/images/500x300.png"
+logo                     : "/assets/images/88x88.png"
+masthead_title           : " "
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Jason Hemann"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : # "/assets/images/bio-photo.jpg"
   bio              : >-
     Assistant Professor of Computer Science at Seton Hall University.
   location         : "South Orange, NJ"
@@ -148,8 +148,6 @@ footer:
     - label: "Bitbucket"
       icon: "fab fa-fw fa-bitbucket"
       # url: https://bitbucket.org/jhemann-shu/
-
-      
 
 # Reading Files
 include:
