--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "http://jasonhemann.github.com/"
 baseurl                  : "" # "/jhemann/test-site"
 repository               : # "jasonhemann/XXX"
 teaser                   : "/assets/images/500x300.png"
-logo                     : "/assets/images/88x88.png"
+logo                     : "" # "/assets/images/88x88.png"
 masthead_title           : " "
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
