Adding up default site structure for my own courses

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,37 @@
 # main links
 main:
-  - title: "Starting Place"
+  - title: "Homework"
+    url: /hw/
+  - title: "Lectures"
+    url: /lec/
+  - title: "Office Hours"
+    url: /office-hours/
+  - title: "Schedule"
+    url: /schedule/
+
+# sidebar links
+sidebar-site-map:
+  - title: "Homework"
+    url: /hw/
+  - title: "Lectures"
+    url: /lec/
+  - title: "Office Hours"
+    url: /office-hours/
+  - title: "Schedule"
+    url: /schedule/
+  - title: "Piazza"
     url: https://example.com
-  # - title: "About"
-  #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "People"
+    url: /people/
+  - title: "Syllabus"
+    url: /syllabus/
+  - title: "Tech"
+    url: /tech/
+  - title: "FAQ"
+    url: /FAQ/
+  - title: "Site Source"
+    url: https://example.com
+  - title: "Enrichment"
+    url: /enrichment/
+  - title: "How's My Driving?"
+    url: /hows-my-driving/
