Helping to clean up the way that I build my sites some

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ name                     : "Jason Hemann"
 description              : # ""
 url                      : "http://jasonhemann.github.com/"
 baseurl                  : "" # "/jhemann/test-site"
-repository               : # "jasonhemann/XXX"
+sourceurl                : "http://github.com/jasonhemann"
+repository               : "" # "/minimal-mistakes"
 teaser                   : "/assets/images/500x300.png"
 logo                     : "" # "/assets/images/88x88.png"
 masthead_title           : " "
