removing NEU and IU, using vars to de-duplicate

--- a/_config.yml
+++ b/_config.yml
@@ -111,6 +111,7 @@ author:
     Assistant Professor of Computer Science at Seton Hall University.
   location         : "South Orange, NJ"
   twitter          : "jhemann"
+  emailaddr        : "hemannja@shu.edu"
   email            : "mailto:hemannja@shu.edu"
   bitbucket        : "jhemann-shu"
   github           : "jasonhemann"
