Remove Piazza, add Gradescope

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -19,8 +19,8 @@ sidebar-site-map:
     url: /office-hours/
   - title: "Schedule"
     url: /schedule/
-  - title: "Piazza"
-    url: https://example.com
+  - title: "Gradescope"
+    url: https://gradescope.com
   - title: "People"
     url: /people/
   - title: "Syllabus"
